# arduino-libg7xx

./: CMakeLists.txt  README.md  library.properties
src/: decode.c  encode.c
